--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <h1>Home Page</h1>
   <main>
     <h2>Project 1</h2>
-    <p>This project is created only with raw html, so isn't styled at all. The website have three pages linked, the first one, Home Page (this one); then, Resume, my resume in website; and the last one is just a list with images of my Favorite Series, maybe you could find something that can interest you.</p>
-    <p>This is the home page of my Project 1 of the Fundamentals of Web Development by the Illinois Institute of Technology.</p>
+    <p>This website contains my resume and my favorite series.</p>
   </main>
 </body>
 </html>
